# lrcfetch

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: resume
lrcfetch/: cache.py  cli.py  config.py  core.py  lrc.py  models.py  mpris.py
lrcfetch/enrichers/: __init__.py  base.py
lrcfetch/fetchers/: __init__.py  base.py  cache_search.py  local.py  lrclib.py  lrclib_search.py  netease.py  qqmusic.py  spotify.py
lrx/: __main__.py  config.py  mpris.py
lrx/fetchers/: local.py  qqmusic.py
lrx_cli/: __main__.py  cache.py  cli.py  config.py  core.py  lrc.py  models.py  mpris.py  normalize.py
lrx_cli/authenticators/: __init__.py  base.py  dummy.py  musixmatch.py  qqmusic.py  spotify.py
lrx_cli/enrichers/: __init__.py  audio_tag.py  base.py  file_name.py  musixmatch.py
lrx_cli/fetchers/: __init__.py  base.py  cache_search.py  local.py  lrclib.py  lrclib_search.py  musixmatch.py  netease.py  qqmusic.py  selection.py  spotify.py
misc/: capture_api_refs.py
src/lrx_cli/: __init__.py  __main__.py  cache.py  cli.py  config.py  core.py  lrc.py  models.py  mpris.py  normalize.py  ranking.py  utils.py
src/lrx_cli/authenticators/: __init__.py  base.py  dummy.py  musixmatch.py  qqmusic.py  spotify.py
src/lrx_cli/enrichers/: __init__.py  audio_tag.py  base.py  file_name.py  musixmatch.py
src/lrx_cli/fetchers/: __init__.py  base.py  cache_search.py  local.py  lrclib.py  lrclib_search.py  musixmatch.py  netease.py  qqmusic.py  selection.py  spotify.py
src/lrx_cli/watch/: __init__.py  control.py  fetcher.py  options.py  player.py  session.py  tracker.py
src/lrx_cli/watch/view/: __init__.py  pipe.py  print.py
tests/: conftest.py  marks.py  test_cache.py  test_config.py  test_fetchers.py  test_local.py  test_lrc.py  test_normalize.py  test_pipeline.py  test_selection.py  test_watch.py
tests/fixtures/fetchers/: lrclib_response.json  lrclib_search_results.json  musixmatch_macro_richsync.json  musixmatch_macro_subtitle.json  musixmatch_search.json  netease_lyrics.json  netease_search.json  qq_lyrics.json  qq_search.json  spotify_synced.json  spotify_unsynced.json
