[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lrcfetch"
version = "0.1.7"
description = "Fetch line-synced lyrics for your music player."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.10.1",
    "dbus-next>=0.2.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mutagen>=1.47.0",
    "platformdirs>=4.9.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
lrcfetch = "lrcfetch.cli:run"

[tool.ruff.lint]
ignore = ["E402"]

[dependency-groups]
dev = ["ruff>=0.15.8"]
