[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lrx-cli"
version = "0.7.9"
description = "Fetch line-synced lyrics for your music player."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.10.1",
    "dbus-next>=0.2.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mutagen>=1.47.0",
    "platformdirs>=4.9.6",
]

[project.scripts]
lrx = "lrx_cli.cli:run"

[tool.ruff.lint]
ignore = ["E402"] # Since there are headers

[dependency-groups]
dev = [
    "poethepoet>=0.44.0",
    "pyright>=1.1.406",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.poe.tasks]
fmt      = "ruff format ."
lint     = { shell = "ruff check . && pyright" }
test     = "pytest"
test-api = "pytest -m 'network or not network'"

[tool.pyright]
pythonVersion    = "3.13"
include          = ["src", "tests", "misc"]
typeCheckingMode = "standard"
